# Werewolf-Rust-SEP

./: .gitignore  Cargo.toml  README.md  winner.html
werewolf_game/: Cargo.toml  hello.html  night-action.html  start_game.html  tag-action.html  user.html
werewolf_game/src/: logic.rs  main.rs  randomdistribution.rs  roles.rs  roles_logic.rs  tag-nacht.rs  tag_nacht.rs  web.rs  ws.rs
werewolf_game/templates/: index.html  join.html  user.html  winner.html
werewolf_game/tests/: game1.txt  game10.txt  game20.txt  game21.txt  game211.txt  game3.txt  players10.txt
