[package]
name = "werewolf_game"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.5"
hyper = "0.14"
htmlescape = "0.3.1"
webbrowser = "1.0.6"
urlencoding = "2.1.3"
rand = "0.9.2"
