[package]
name = "werewolf_game"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = "0.5"
hyper = "0.14"
htmlescape = "0.3.1"
webbrowser = "1.0.6"
urlencoding = "2.1.3"
rand = "0.9.2"
image = "0.25.9"
askama = "0.15.4"
futures = "0.3.31"
local-ip-address = "0.6.10"
qrcode = "0.14.1"
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"
log = "0.4.29"
env_logger = "0.11.8"